--- a/src/public/style.css
+++ b/src/public/style.css
@@ -36,11 +36,11 @@ li {
     text-align: center;
 }
 
-/* 
+
 section {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: space-around;
-} */
+}
 
