--- a/src/views/order.hbs
+++ b/src/views/order.hbs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Order</title>
 </head>
 
 <body>
@@ -19,9 +19,9 @@
         <p>Toppings: {{toppingCount}} </p>
         <p>Gluten-Free Crust: {{gfCrust}} </p>
         <p>Special Instructions: {{instructions}} </p>
-        <p>Price: {{price}} </p>
-
+        <p>Price: ${{realPrice}} </p>
     </div>
+
     <a href="/">Back to Homepage</a>
 </body>
 
