--- a/src/views/review-review.hbs
+++ b/src/views/review-review.hbs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Thanks!</title>
 </head>
 
 <body>
@@ -19,6 +19,7 @@
         <p>Comment: {{comment}} </p>
         <p>Rating: {{rating}} </p>
     </div>
+
     <a href="/">Back to Homepage</a>
 </body>
 
