--- a/src/views/review.hbs
+++ b/src/views/review.hbs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title>Leave a Review</title>
+    <title>Review</title>
 </head>
 
 <body>
@@ -24,16 +24,18 @@
             <label for="comment">Comment</label>
             <input type="text" id="comment" name="comment">
 
-            <label for="1">1</label><br>
-            <input type="radio" name="rating" id="1" value="1">
-            <label for="2">2</label><br>
-            <input type="radio" name="rating" id="2" value="2">
-            <label for="3">3</label><br>
-            <input type="radio" name="rating" id="3" value="3">
-            <label for="4">4</label><br>
-            <input type="radio" name="rating" id="4" value="4">
-            <label for="5">5</label><br>
-            <input type="radio" name="rating" id="5" value="5">
+            <section>
+                <input type="radio" name="rating" id="5" value="5">
+                <label for="5">5 (BEST!)</label><br>
+                <input type="radio" name="rating" id="4" value="4">
+                <label for="4">4</label><br>
+                <input type="radio" name="rating" id="3" value="3">
+                <label for="3">3</label><br>
+                <input type="radio" name="rating" id="2" value="2">
+                <label for="2">2</label><br>
+                <input type="radio" name="rating" id="1" value="1">
+                <label for="1">1(worst)</label><br>
+            </section>
 
             <button type="submit">Submit</button>
         </form>
